<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:onClick="back"
            android:src="@mipmap/back2" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text=""
            android:textColor="@color/qmui_config_color_white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:text="@string/edit"
            android:visibility="gone"
            android:textColor="@color/Write" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_course_cover"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:scaleType="fitXY" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/line_d6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/grey2"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_material"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/lable_btn_qing_bg"
                android:gravity="center"
                android:text="@string/course_material"
                android:textColor="@color/Write"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_detail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/lable_btn_red_bg"
                android:gravity="center"
                android:text="@string/new_lesson"
                android:textColor="@color/Write"
                android:textSize="16dp" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/line_d6" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/lv_catalog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:divider="@color/Write"
        android:dividerHeight="0dp" />

</LinearLayout>
